tekton-trigger/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: elgitlab
  namespace: default
  
spec:
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: gitlab-listener
  type: LoadBalancer
  ports:
    - name: elgitlab
      port: 8080
      protocol: TCP
      targetPort: 8080
